[tool.poetry]
name = "vcp-api"
version = "0.1.0"
description = ""
authors = ["tomazinhal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.5.0"
anyio = "3.7.1"
astroid = "2.15.6"
attrs = "23.1.0"
black = "23.9.1"
click = "8.1.7"
dill = "0.3.7"
exceptiongroup = "1.1.3"
fastapi = "0.103.1"
h11 = "0.14.0"
httptools = "0.6.0"
idna = "3.4"
isort = "5.12.0"
jsonschema = "4.18.2"
jsonschema-specifications = "2023.7.1"
lazy-object-proxy = "1.9.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
ocpp = "0.19.0"
packaging = "23.1"
pathspec = "0.11.2"
platformdirs = "3.10.0"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
pylint = "2.17.5"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
referencing = "0.30.2"
rpds-py = "0.10.3"
sniffio = "1.3.0"
starlette = "0.27.0"
structlog = "23.1.0"
tomli = "2.0.1"
tomlkit = "0.12.1"
typing = "3.7.4.3"
typing-extensions = "4.8.0"
uvicorn = "0.23.2"
uvloop = "0.17.0"
watchfiles = "0.20.0"
websockets = "11.0.3"
wrapt = "1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
